# Document-Search-Engine-using-Trie-and-Inverted-Index

./: .gitignore  README.md
backend/: CMakeLists.txt  README.md
backend/data/documents/: file1.txt  file2.txt
backend/src/: main.cpp
backend/src/api/: Routes.cpp  Routes.h  SearchController.cpp  SearchController.h
backend/src/engine/: InvertedIndex.cpp  InvertedIndex.h  Ranker.cpp  Ranker.h  SearchEngine.cpp  SearchEngine.h  Trie.cpp  Trie.h
backend/src/models/: Document.h  SearchResult.h  Statistics.h
backend/src/parser/: DocumentParser.cpp  DocumentParser.h  Tokenizer.cpp  Tokenizer.h
backend/src/utils/: Timer.cpp  Timer.h
backend/tests/: IndexTests.cpp  SearchTests.cpp  TrieTests.cpp
data/documents/: ml.txt  python.txt
docs/: design.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css
frontend/src/components/: AnalyticsDashboard.jsx  DarkModeToggle.jsx  EmptyState.jsx  LoadingSpinner.jsx  SearchBar.jsx  SearchHistory.jsx  SearchResults.jsx  StatsCard.jsx  Suggestions.jsx
frontend/src/pages/: Home.jsx
frontend/src/services/: searchApi.js
